[gd_scene load_steps=5 format=3 uid="uid://b21g746ev7f8v"]

[ext_resource type="Script" path="res://Assets/GUIs/radar_grid.gd" id="1_se5ut"]
[ext_resource type="PackedScene" uid="uid://cleqcfouqc6gl" path="res://Assets/Enemies/medium_monster.tscn" id="2_e8fmt"]
[ext_resource type="PackedScene" uid="uid://6vybww4f30oi" path="res://Assets/Enemies/small_monster.tscn" id="4_6ig4c"]
[ext_resource type="Texture2D" uid="uid://c0ltkv3jmab1i" path="res://Assets/GUIs/Radar_grid.png" id="5_iu5ra"]

[node name="radar-grid" type="Node2D"]
script = ExtResource("1_se5ut")
mediumMonsterScene = ExtResource("2_e8fmt")
smallEnemyScene = ExtResource("4_6ig4c")

[node name="spawn_timer" type="Timer" parent="."]
wait_time = 12.0
autostart = true

[node name="small_monster_timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="medium_monster_timer" type="Timer" parent="."]
wait_time = 7.5
autostart = true

[node name="RadarGrid" type="Sprite2D" parent="."]
position = Vector2(288, 288)
texture = ExtResource("5_iu5ra")

[connection signal="timeout" from="spawn_timer" to="." method="_on_spawn_timer_timeout"]
[connection signal="timeout" from="small_monster_timer" to="." method="_on_small_monster_timer_timeout"]
[connection signal="timeout" from="medium_monster_timer" to="." method="_on_medium_monster_timer_timeout"]
